fix: fix overlay flickering and slider with step

--- a/packages/veui-theme-one/components/slider.less
+++ b/packages/veui-theme-one/components/slider.less
@@ -48,12 +48,12 @@
         width: 100%;
         position: absolute;
         top: -1 * @default-mark-top-offset;
+      }
 
-        div {
-          height: @default-mark-height;
-          border-left: 1px solid @veui-gray-color-5;
-          position: absolute;
-        }
+      &-mark {
+        height: @default-mark-height;
+        border-left: 1px solid @veui-gray-color-5;
+        position: absolute;
       }
     }
   }
@@ -131,10 +131,8 @@
           background-color: @veui-gray-color-4;
         }
 
-        &-marks {
-          div {
-            border-color: @veui-gray-color-6;
-          }
+        &-mark {
+          border-color: @veui-gray-color-6;
         }
       }
     }
